--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,24 +3,68 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 <script type="text/javascript" src="resources/angular.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script> -->
 <script type="text/javascript" src="resources/angular-route.js"></script>
 <script type="text/javascript" src="resources/angular-cookies.js"></script>
 <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.1.1/sockjs.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
 <script type="text/javascript" src="Blog/blogctrl.js"></script>
 <script type="text/javascript" src="Forum/forumctrl.js"></script>
 <script type="text/javascript" src="Users/userctrl.js"></script>
 <script type="text/javascript" src="Login/loginctrl.js"></script>
 <script type="text/javascript" src="Login/loginService.js"></script>
 <script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="Friend/allUsersCtrl.js"></script>
+<script type="text/javascript" src="Chat/chatController.js"></script>
+<script type="text/javascript" src="Chat/chatService.js"></script>
+<link rel="stylesheet" href="resources/navbar.css">
+<link rel="stylesheet" href="resources/login.css">
+<link rel="stylesheet" href="resources/register.css">
+<link rel="stylesheet" href="resources/search.css">
+<link rel="stylesheet" href="resources/user.css">
 </head>
-<body data-ng-app="myroute">
+<body data-ng-app="myroute" style="background-image:url(C:\Users\BHAVNA\Pictures\macbook-flat-silver.jpg)">
+<div class="container">
+    <nav class="navbar navbar-default navbar-xs" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    
+    <a class="navbar-brand" href="#home"><b>Synerg  </b>Home</a>
+  </div>
 
-<a href="#blog">Blog</a>
-<a href="#forum">Forum</a>
-<a href="#register">Register here</a>
-<a href="#login">Login</a>
-<a href="#home">Home</a>
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li><a href="#blog">Blog</i></a></li>
+      <li><a href="#forum">Forum</a></li>
+     <li><a href="#users">Find Friends</a></li>
+     <li><a href="#chat">Chat</a></li>
+     <!--  <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Action</a></li>
+          <li><a href="#">Another action</a></li>
+          <li><a href="#">Something else here</a></li>
+          <li class="divider"></li>
+          <li><a href="#">Separated link</a></li>
+          <li class="divider"></li>
+          <li><a href="#">One more separated link</a></li>
+        </ul>
+      </li> -->
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+     <li><a href="#register"><i class="glyphicon glyphicon-user"></i></a></li>
+     <li><a href="#login"><i class="glyphicon glyphicon-log-in"></i></a></li>
+    </ul>
+  </div><!-- /.navbar-collapse -->
+</nav>
+</div>
 <div data-ng-view></div>
 </body>
+
 </html>
