--- a/WebContent/Forum/Forum.html
+++ b/WebContent/Forum/Forum.html
@@ -5,26 +5,55 @@
 <title>Insert title here</title>
 <script type="text/javascript" src="../resources/angular.min.js"></script>
 <body data-ng-app="forumApp">
-<form role="form" data-ng-submit="submit()"
+<div class="container">
+<form role="form" data-ng-submit="submit()" class="form-horizontal"
 		 action="" data-ng-controller="forumctrl">
-		name: <input type="text" data-ng-model="name"> <br>
-		topic: <input type="text" data-ng-model="topic"> <br>
-userid:<input type="text" data-ng-model="userid">		
+		  <div class="form-group">
+                    <label for="title" class="col-sm-3 control-label">Name</label>
+                    <div class="col-sm-9">
+		<input type="text" data-ng-model="name" class="form-control" autofocus>
+		</div></div>
+		  <div class="form-group">
+                    <label for="title" class="col-sm-3 control-label">Topic</label>
+                    <div class="col-sm-9">
+		 <input type="text" data-ng-model="topic" class="form-control" autofocus> <br>
+		</div></div>	
 
-				
-		Address:
-		<textarea draggable="false" rows="13" data-ng-model="description"></textarea>
-		
-			<button type="submit">Create Forum</button>
+				  <div class="form-group">
+                    <label for="title" class="col-sm-3 control-label">Description</label>
+                    <div class="col-sm-9">
+		<textarea draggable="false" rows="13" data-ng-model="description" class="form-control" autofocus></textarea>
+		</div></div>
+		 <div class="form-group">
+                    <div class="col-sm-9 col-sm-offset-3">
+			<button type="submit" class="btn btn-primary ">Save Forum</button>
+			</div></div>
 	</form>
+	</div>
+	<div class="container" style="padding-top:10px">
+	<div class="row">
+        <div class="col-md-4 col-md-offset-3">
+         <form action="" class="search-form">
+                <div class="form-group has-feedback">
+	<input type="text" data-ng-model="search" placeholder="search forum"  class="form-control">
+	 <span class="glyphicon glyphicon-search form-control-feedback"></span>
+	 </div>
+	 </form>
+	</div></div></div>
 	<div data-ng-init="getAllForum()">
-	<div data-ng-repeat="forum in forums">
-	{{forum.name}}
-	{{forum.topic}}
-	{{forum.description}}
-	<button data-ng-click="deleteforum(forum.id)">delete</button>
+	<div data-ng-repeat="forum in forums | filter:search">
+	<div class="container">
+	<div class="row">
+ <div class="span3">
+        	<div class="well">
+	<h2 class="text-info">{{forum.name}}</h2>
+		<p ><span class="label label-info"><font size="3">{{forum.topic}}</font></span></p>
+		<hr>
+	<p>{{forum.description}}</p>
+	<hr>
+	<button data-ng-click="deleteforum(forum.id)" class="btn btn-primary btn-danger">delete</button>
 	</div>
-	</div>
+	</div></div></div></div></div>
 	<script type="text/javascript" src="forumctrl.js"></script>
 </body>
 </html>
