--- a/WebContent/Login/Login.html
+++ b/WebContent/Login/Login.html
@@ -5,16 +5,20 @@
 <title>Insert title here</title>
 <script type="text/javascript" src="loginctrl.js"></script>
 <script type="text/javascript" src="loginService.js"></script>
+
 </head>
 <body data-ng-app="app">
-<h2>Login</h2>
-<form action="" data-ng-submit="vm.login()">
-Username:
-<input type="text" data-ng-model="vm.username">
-Password:
-<input type="password" data-ng-model="vm.password">
-<button type="submit">Login</button>
-</form>
+ <div class="wrapper" >
+    <form class="form-signin" action="" data-ng-submit="vm.login()">       
+      <h2 class="form-signin-heading">Please login</h2>
+      <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" data-ng-model="vm.username"/>
+      <input type="password" class="form-control" name="password" placeholder="Password" required="" data-ng-model="vm.password"/>      
+      <label class="checkbox">
+        <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
+      </label>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>   
+    </form>
+  </div>
 
 </body>
 </html>
