Job and ForumComment

--- a/WebContent/Chat/chat.html
+++ b/WebContent/Chat/chat.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="chatController.js"></script>
 <script type="text/javascript" src="chatService.js"></script>
 </head>
-<body data-ng-app="app">
+<body data-ng-app="myApp">
 <div data-ng-controller="chatController">
 <form data-ng-submit="addMessage()" name="messageForm">
 <input type="text" placeholder="Enter new Message" data-ng-model="message">
