--- a/WebContent/Friend/AllUsers.html
+++ b/WebContent/Friend/AllUsers.html
@@ -6,7 +6,7 @@
 <script type="text/javascript" src="allUsersCtrl.js"></script>
 <script type="text/javascript" src="../resources/angular.min.js"></script>
 </head>
-<body data-ng-app="allusers">
+<body data-ng-app="myApp">
 <div data-ng-controller="alluserctrl">
 <div class="container" style="padding-top:10px">
 	<div class="row">
