--- a/WebContent/Home.html
+++ b/WebContent/Home.html
@@ -7,10 +7,10 @@
 <script type="text/javascript" src="Login/loginctrl.js"></script>
 <script type="text/javascript" src="Login/loginService.js"></script>
 </head>
-<body data-ng-app="app">
+<body data-ng-app="myApp">
 <h1>Synerg</h1>
 
-<a href="" data-ng-click="vm.logout()">logout</a>
+ <a href="" data-ng-click="vm.logout()">logout</a>
 
 </body>
 </html>
