--- a/WebContent/Login/Login.html
+++ b/WebContent/Login/Login.html
@@ -7,8 +7,10 @@
 <script type="text/javascript" src="loginService.js"></script>
 
 </head>
-<body data-ng-app="app">
- <div class="wrapper" >
+<body data-ng-app="myApp">
+<div data-ng-controller="LoginController">
+{{islogged}}</div>
+ <div class="wrapper">
     <form class="form-signin" action="" data-ng-submit="vm.login()">       
       <h2 class="form-signin-heading">Please login</h2>
       <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" data-ng-model="vm.username"/>
