--- a/WebContent/Users/register.html
+++ b/WebContent/Users/register.html
@@ -7,7 +7,7 @@
 <script type="text/javascript" src="../resources/angular.min.js"></script>
 
 </head>
-<body data-ng-app="registerApp">
+<body data-ng-app="myApp">
 
 	<div class="container">
             <form class="form-horizontal" role="form" data-ng-submit="submit()" action=""
