Friend accept and reject

--- a/WebContent/Chat/chat.html
+++ b/WebContent/Chat/chat.html
@@ -8,7 +8,7 @@
 </head>
 <body data-ng-app="myApp">
 <div data-ng-controller="chatController">
-<form data-ng-submit="addMessage()" name="messageForm">
+<form data-ng-submit="addMessage()" name="messageForm" align="center">
 <input type="text" placeholder="Enter new Message" data-ng-model="message">
 <input type="submit" value="send">
 </form>
