--- a/WebContent/Forum/IndividualForum.html
+++ b/WebContent/Forum/IndividualForum.html
@@ -42,7 +42,6 @@
                 <div class="media">
                     <a class="pull-left" href="#"><img class="media-object" src="http://bootdey.com/img/Content/avatar/avatar1.png" alt=""></a>
                     <div class="media-body">
-                    <div data-ng-bind="getuser(comm.userid)">
                         <h4 class="media-heading">{{users.username}}</h4></div>
                         <p>{{comm.comment}}</p>
                         <ul class="list-unstyled list-inline media-detail pull-left">
@@ -54,8 +53,8 @@
                             <li class=""><a href="">Reply</a></li>
                         </ul>
                     </div>
-                </div></div></div>
                 </div>
+                </div></div>
                 </div>
                 </div>
                 </section>
