User Profile and Friendlist with online and offline

--- a/WebContent/Friend/MyFriends.html
+++ b/WebContent/Friend/MyFriends.html
@@ -8,9 +8,12 @@
 <div data-ng-controller="myfriendctrl">
 <div data-ng-init="getmyfriends()">
 <div data-ng-repeat="myfriend in myfriends">
-{{myfriend.friendid}}
+Your Friend:{{myfriend.friendid}}
+Online:{{myfriend.isonline}}
 </div>
 </div>
 </div>
+Note:-o is online,
+f is offline
 </body>
 </html>
