--- a/WebContent/Login/Login.html
+++ b/WebContent/Login/Login.html
@@ -13,7 +13,7 @@
     <form class="form-signin" action="" data-ng-submit="vm.login()">       
       <h2 class="form-signin-heading">Please login</h2>
       <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" data-ng-model="vm.username"/>
-      <input type="password" class="form-control" name="password" placeholder="Password" required="" data-ng-model="vm.password"/>      
+      <input type="password" class="form-control" name="password" placeholder="Password" required="" data-ng-model="vm.password" style="padding-top:10px;"/>     
       <label class="checkbox">
         <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
       </label>
