updated blog and forum

--- a/WebContent/Friend/AllUsers.html
+++ b/WebContent/Friend/AllUsers.html
@@ -42,7 +42,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <img src="http://bootdey.com/img/Content/user_1.jpg" alt="">
+                                        <img data-ng-src="data:image/JPEG;base64,{{user.image}}" alt="no dp">
                                         <a href="#" class="user-link">{{user.username}}</a>
                                         <span class="user-subhead">{{user.role}}</span>
                                     </td>
