--- a/WebContent/Forum/Forum.html
+++ b/WebContent/Forum/Forum.html
@@ -52,7 +52,8 @@
 		<hr>
 	<p>{{forum.description}}</p>
 	<hr>
-	<button data-ng-click="deleteforum(forum.id)" class="btn btn-primary btn-danger">delete</button>
+	<button data-ng-show="forum.userid==globals.currentUser.username" data-ng-click="editforum(forum.id,forum.name,forum.topic,forum.description)" class="btn btn-success">Edit</button>
+	<button data-ng-show="forum.userid==globals.currentUser.username" data-ng-click="deleteforum(forum.id)" class="btn btn-primary btn-danger">Delete</button>
 	</div>
 	</div></div></div></div></div>
 	<script type="text/javascript" src="forumctrl.js"></script>
