--- a/WebContent/Home.html
+++ b/WebContent/Home.html
@@ -3,14 +3,12 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
-<script type="text/javascript" src="resources/angular.min.js"></script>
-<script type="text/javascript" src="Login/loginctrl.js"></script>
-<script type="text/javascript" src="Login/loginService.js"></script>
+
 </head>
 <body data-ng-app="myApp">
 <h1>Synerg</h1>
 
- <a href="" data-ng-click="vm.logout()">logout</a>
+<div  data-ng-show="globals.currentUser.islogged"><a  href="" data-ng-click="vm.logout()">logout</a></div> 
 
 
 </body>
