--- a/WebContent/Users/register.html
+++ b/WebContent/Users/register.html
@@ -3,7 +3,6 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
-<script type="text/javascript" src="userctrl.js"></script>
 
 </head>
 <body data-ng-app="myApp">
@@ -14,31 +13,31 @@
                 <div class="form-group">
                     <label for="userName" class="col-sm-3 control-label">User Name</label>
                     <div class="col-sm-9">
-                        <input type="text" id="userName" placeholder="User Name" data-ng-model="username" class="form-control" autofocus>
+                        <input type="text" id="userName" placeholder="User Name" required="" data-ng-model="username" class="form-control" autofocus >
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="email" class="col-sm-3 control-label">Email</label>
                     <div class="col-sm-9">
-                        <input type="email" id="email" placeholder="Email" data-ng-model="mail" class="form-control">
+                        <input type="email" id="email" placeholder="Email" required="" data-ng-model="mail" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="password" class="col-sm-3 control-label">Password</label>
                     <div class="col-sm-9">
-                        <input type="password" id="password" placeholder="Password"  data-ng-model="password" class="form-control">
+                        <input type="password" id="password" required="" placeholder="Password"  data-ng-model="password" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="birthDate" class="col-sm-3 control-label">Date of Birth</label>
                     <div class="col-sm-9">
-                        <input type="date" id="birthDate" data-ng-model="dob" class="form-control">
+                        <input type="date" id="birthDate" required="" data-ng-model="dob" class="form-control">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="mobile" class="col-sm-3 control-label">Mobile</label>
                     <div class="col-sm-9">
-                       <input type="number" id="mobile" placeholder="mobile"  data-ng-model="mobile" class="form-control">
+                       <input type="number" id="mobile" placeholder="mobile" required=""  data-ng-model="mobile" class="form-control">
                     </div>
                 </div> <!-- /.form-group -->
                 <div class="form-group">
