--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -49,7 +49,7 @@
       <li><a href="#forum">Forum</a></li>
      <li><a href="#users">Find Friends</a></li>
      <li><a href="#chat">Chat</a></li>
-     <li><a href="#jobs">Find Jobs</a></li>
+   <!--   <li><a href="#jobs">Find Jobs</a></li> -->
      <!--  <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -69,7 +69,7 @@
      <li><a href="#login" data-ng-hide="globals.currentUser.islogged"><i class="glyphicon glyphicon-log-in"></i></a></li>
      <li style="padding-top:15px;" data-ng-show="globals.currentUser.islogged">Welcome:{{globals.currentUser.username}}</li>
      <li data-ng-show="globals.currentUser.islogged"><a href="#myprofile">My Profile</a></li>
-     <li data-ng-show="globals.currentUser.islogged"><a href="" data-ng-click="vm.logout()">logout</a></li>
+     <li data-ng-show="globals.currentUser.islogged"><a href=""  data-ng-controller="LoginController" data-ng-click="vm.logout()">logout</a></li>
     </ul>{{currentuser.id}}
   </div><!-- /.navbar-collapse -->
 </nav>
